# mastermind

./: Cargo.toml
src/: lib.rs  main.rs  scores.rs
src/scores/: tests.rs
